feat(admin, inspector): ✨ Enhance profile page with dynamic image upload, personal info editing, and password management

--- a/pages/inspector/components/header.html
+++ b/pages/inspector/components/header.html
@@ -52,7 +52,7 @@
  <body id="header">
   <div class="header">
    <div class="profile">
-    <img src="/assets/admin_prof.png" alt="Profile Picture" />
+    <img src="/assets/inspector_prof.png" alt="Profile Picture" />
     <span class="name" id="profileName"></span>
    </div>
    <div class="datetime">
